--- a/v4/v4.cbp
+++ b/v4/v4.cbp
@@ -2,35 +2,26 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="v3" />
+		<Option title="v4" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/v3" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/v4" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-Wall" />
-					<Add option="-pg" />
 					<Add option="-g" />
-					<Add directory="." />
-					<Add directory="../base_h" />
-					<Add directory="../base_c" />
 				</Compiler>
-				<Linker>
-					<Add option="-pg" />
-				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/v3" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/v4" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="../base" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -61,7 +52,6 @@
 		<Unit filename="../base_h/errors.h" />
 		<Unit filename="../base_h/nasreader.h" />
 		<Unit filename="../base_h/neighbour.h" />
-		<Unit filename="../base_h/tetranet.h" />
 		<Unit filename="../base_h/vector.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
@@ -69,6 +59,7 @@
 		<Unit filename="tetranet.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="tetranet.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
