--- a/v1/v1.cbp
+++ b/v1/v1.cbp
@@ -37,30 +37,32 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="../base" />
+			<Add directory="." />
+			<Add directory="../base_c" />
+			<Add directory="../base_h" />
 		</Compiler>
-		<Unit filename="../base/atvertex.h" />
-		<Unit filename="../base/common.h" />
-		<Unit filename="../base/errors.c">
+		<Unit filename="../base_c/errors.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base/errors.h" />
-		<Unit filename="../base/nasreader.c">
+		<Unit filename="../base_c/nasreader.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base/nasreader.h" />
-		<Unit filename="../base/neighbour.c">
+		<Unit filename="../base_c/neighbour.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base/neighbour.h" />
-		<Unit filename="../base/tetranet.c">
+		<Unit filename="../base_c/tetranet.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base/tetranet.h" />
-		<Unit filename="../base/vector.c">
+		<Unit filename="../base_c/vector.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base/vector.h" />
+		<Unit filename="../base_h/atvertex.h" />
+		<Unit filename="../base_h/common.h" />
+		<Unit filename="../base_h/errors.h" />
+		<Unit filename="../base_h/nasreader.h" />
+		<Unit filename="../base_h/neighbour.h" />
+		<Unit filename="../base_h/tetranet.h" />
+		<Unit filename="../base_h/vector.h" />
 		<Unit filename="atvertex.c">
 			<Option compilerVar="CC" />
 		</Unit>
