--- a/v3/v3.cbp
+++ b/v3/v3.cbp
@@ -12,16 +12,14 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-fomit-frame-pointer" />
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-O3" />
 					<Add option="-Wall" />
-					<Add option="-pg" />
-					<Add option="-g" />
 					<Add directory="." />
 					<Add directory="../base_h" />
 					<Add directory="../base_c" />
 				</Compiler>
-				<Linker>
-					<Add option="-pg" />
-				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/v3" prefix_auto="1" extension_auto="1" />
