--- a/v3a/v3a.cbp
+++ b/v3a/v3a.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="v4" />
+		<Option title="v3a" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/v4" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/v3a" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -15,13 +15,13 @@
 					<Add option="-fomit-frame-pointer" />
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
-					<Add option="-Wall" />
-					<Add directory="/home/martinj/sze/szakdolg/valtozatok/v4" />
-					<Add directory="/home/martinj/sze/szakdolg/valtozatok/base_h" />
+					<Add directory="../v3a" />
+					<Add directory="../base_c" />
+					<Add directory="../base_h" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/v4" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/v3a" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -35,9 +35,6 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="../v4" />
-			<Add directory="../base_c" />
-			<Add directory="../base_h" />
 		</Compiler>
 		<Unit filename="../base_c/atvertex.c">
 			<Option compilerVar="CC" />
@@ -59,6 +56,7 @@
 		<Unit filename="../base_h/errors.h" />
 		<Unit filename="../base_h/nasreader.h" />
 		<Unit filename="../base_h/neighbour.h" />
+		<Unit filename="../base_h/tetranet.h" />
 		<Unit filename="../base_h/vector.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
@@ -66,7 +64,6 @@
 		<Unit filename="tetranet.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="tetranet.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
