--- a/v3a/v3a.cbp
+++ b/v3a/v3a.cbp
@@ -12,13 +12,17 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-fomit-frame-pointer" />
-					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
+					<Add option="-Wall" />
+					<Add option="-pg" />
+					<Add option="-g" />
 					<Add directory="../v3a" />
 					<Add directory="../base_c" />
 					<Add directory="../base_h" />
 				</Compiler>
+				<Linker>
+					<Add option="-pg" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/v3a" prefix_auto="1" extension_auto="1" />
@@ -48,6 +52,9 @@
 		<Unit filename="../base_c/neighbour.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../base_c/testcase.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../base_c/vector.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -56,6 +63,7 @@
 		<Unit filename="../base_h/errors.h" />
 		<Unit filename="../base_h/nasreader.h" />
 		<Unit filename="../base_h/neighbour.h" />
+		<Unit filename="../base_h/testcase.h" />
 		<Unit filename="../base_h/tetranet.h" />
 		<Unit filename="../base_h/vector.h" />
 		<Unit filename="main.c">
