--- a/v4/v4.cbp
+++ b/v4/v4.cbp
@@ -12,13 +12,16 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-fomit-frame-pointer" />
-					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
 					<Add option="-Wall" />
+					<Add option="-pg" />
+					<Add option="-g" />
 					<Add directory="/home/martinj/sze/szakdolg/valtozatok/v4" />
 					<Add directory="/home/martinj/sze/szakdolg/valtozatok/base_h" />
 				</Compiler>
+				<Linker>
+					<Add option="-pg" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/v4" prefix_auto="1" extension_auto="1" />
@@ -51,6 +54,9 @@
 		<Unit filename="../base_c/neighbour.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../base_c/testcase.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../base_c/vector.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -59,6 +65,7 @@
 		<Unit filename="../base_h/errors.h" />
 		<Unit filename="../base_h/nasreader.h" />
 		<Unit filename="../base_h/neighbour.h" />
+		<Unit filename="../base_h/testcase.h" />
 		<Unit filename="../base_h/vector.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
