--- a/v3/v3.cbp
+++ b/v3/v3.cbp
@@ -16,9 +16,6 @@
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
 					<Add option="-Wall" />
-					<Add directory="." />
-					<Add directory="../base_h" />
-					<Add directory="../base_c" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -28,7 +25,6 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="../base" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -37,36 +33,41 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="." />
 			<Add directory="../base" />
 		</Compiler>
-		<Unit filename="../base_c/atvertex.c">
+		<Unit filename="../base/atvertex.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base_c/errors.c">
+		<Unit filename="../base/atvertex.h" />
+		<Unit filename="../base/common.h" />
+		<Unit filename="../base/errors.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base_c/nasreader.c">
+		<Unit filename="../base/errors.h" />
+		<Unit filename="../base/nasreader.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base_c/neighbour.c">
+		<Unit filename="../base/nasreader.h" />
+		<Unit filename="../base/neighbour.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base_c/vector.c">
+		<Unit filename="../base/neighbour.h" />
+		<Unit filename="../base/testcase.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../base_h/atvertex.h" />
-		<Unit filename="../base_h/common.h" />
-		<Unit filename="../base_h/errors.h" />
-		<Unit filename="../base_h/nasreader.h" />
-		<Unit filename="../base_h/neighbour.h" />
-		<Unit filename="../base_h/tetranet.h" />
-		<Unit filename="../base_h/vector.h" />
+		<Unit filename="../base/testcase.h" />
+		<Unit filename="../base/vector.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../base/vector.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="tetranet.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="tetranet.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
