v5-ben is a nyilvantartott ures helyek + main.c a base-be

--- a/v3/v3.cbp
+++ b/v3/v3.cbp
@@ -24,7 +24,8 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-march=core2" />
+					<Add option="-O3" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,7 +33,6 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Wall" />
 			<Add directory="." />
 			<Add directory="../base" />
 		</Compiler>
@@ -45,6 +45,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../base/errors.h" />
+		<Unit filename="../base/main.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../base/nasreader.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -61,9 +64,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../base/vector.h" />
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Unit filename="tetranet.c">
 			<Option compilerVar="CC" />
 		</Unit>
