--- a/v4/v4.cbp
+++ b/v4/v4.cbp
@@ -27,7 +27,8 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-march=core2" />
+					<Add option="-O3" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -35,7 +36,6 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Wall" />
 			<Add directory="." />
 			<Add directory="../base" />
 		</Compiler>
@@ -48,6 +48,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../base/errors.h" />
+		<Unit filename="../base/main.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../base/nasreader.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -64,9 +67,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../base/vector.h" />
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Unit filename="tetranet.c">
 			<Option compilerVar="CC" />
 		</Unit>
