--- a/v4/v4.cbp
+++ b/v4/v4.cbp
@@ -11,6 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="../data/szivocso_vol_tetra_hm.nas ../data/teszt.nas" />
 				<Compiler>
 					<Add option="-O3" />
 					<Add option="-Wall" />
