v5 igazitasa v4-hez, nearest atvetele

--- a/v5/v5.cbp
+++ b/v5/v5.cbp
@@ -11,6 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="../data/szivocso_vol_tetra_hm.nas" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -38,6 +39,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../base/atvertex.h" />
+		<Unit filename="../base/common.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../base/common.h" />
 		<Unit filename="../base/errors.c">
 			<Option compilerVar="CC" />
@@ -50,6 +54,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../base/nasreader.h" />
+		<Unit filename="../base/nearestp.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../base/nearestp.h" />
 		<Unit filename="../base/neighbour.c">
 			<Option compilerVar="CC" />
 		</Unit>
