--- a/v3/v3.cbp
+++ b/v3/v3.cbp
@@ -11,12 +11,16 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="../data/szivocso_vol_tetra_hm.nas ../data/teszt.nas" />
 				<Compiler>
-					<Add option="-fomit-frame-pointer" />
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
-					<Add option="-Wall" />
+					<Add option="-pg" />
+					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-pg" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/v3" prefix_auto="1" extension_auto="1" />
