az elso teljes erteku teszt

--- a/v3/v3.cbp
+++ b/v3/v3.cbp
@@ -28,8 +28,10 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-march=core2" />
 					<Add option="-O3" />
+					<Add option="-march=native" />
+					<Add option="-fprefetch-loop-arrays" />
+					<Add option="-funroll-loops" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
