--- a/v5/v5.cbp
+++ b/v5/v5.cbp
@@ -29,8 +29,10 @@
 				<Option compiler="gcc" />
 				<Option projectCompilerOptionsRelation="2" />
 				<Compiler>
-					<Add option="-march=core2" />
 					<Add option="-O3" />
+					<Add option="-march=native" />
+					<Add option="-fprefetch-loop-arrays" />
+					<Add option="-funroll-loops" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
