--- a/v5/v5.cbp
+++ b/v5/v5.cbp
@@ -27,6 +27,7 @@
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="../data/fuvoka_640000_mod.bdf ../data/szivocso_vol_tetra_hm.nas ../data/teszt.nas" />
 				<Option projectCompilerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-O3" />
