v3 project alapertelmezett parameterek modositasa

--- a/v3/v3.cbp
+++ b/v3/v3.cbp
@@ -11,7 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="../data/szivocso_vol_tetra_hm.nas ../data/teszt.nas" />
+				<Option parameters="../data/fuvoka_640000_mod.bdf ../data/szivocso_vol_tetra_hm.nas ../data/teszt.nas" />
 				<Compiler>
 					<Add option="-pg" />
 					<Add option="-g" />
