--- a/v5/v5.cbp
+++ b/v5/v5.cbp
@@ -11,10 +11,8 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="../data/szivocso_vol_tetra_hm.nas" />
+				<Option parameters="../data/fuvoka_640000_mod.bdf ../data/szivocso_vol_tetra_hm.nas ../data/teszt.nas" />
 				<Compiler>
-					<Add option="-fexpensive-optimizations" />
-					<Add option="-O3" />
 					<Add option="-pg" />
 					<Add option="-g" />
 				</Compiler>
@@ -28,12 +26,12 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option parameters="../data/fuvoka_640000_mod.bdf ../data/szivocso_vol_tetra_hm.nas ../data/teszt.nas" />
-				<Option projectCompilerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-O3" />
 					<Add option="-march=native" />
 					<Add option="-fprefetch-loop-arrays" />
 					<Add option="-funroll-loops" />
+					<Add option="-ffast-math" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
